# sniproxy

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.amd64  Dockerfile.arm64  LICENSE.md  README.md  build.sh  fake.rs  push.sh
.cargo/: config.toml
.github/workflows/: pr.yaml  release.yaml  rust.yaml
docker-compose-example/: .env.example  README.md  docker-compose.yml
docker-compose-example/blocky/: config.yml
docker-compose-example/grafana-agent/: config.yml
docker-compose-example/wireguard/: wg0.conf
src/: http.rs  main.rs  prom.rs  shutdown.rs  task.rs  tls.rs  upstream.rs  util.rs
src/upstream/: lookup_result.rs  mod.rs
