[package]
name = "sniproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.8"
tls-parser = { version = "0.11.0", features = ["serialize"] }
cookie-factory = { version="0.3" }
fast-socks5 = "0.8.2"
trust-dns-resolver = { version = "0.23.0", features = ["dns-over-rustls"] }
clap = { version = "4.4.2", features = ["derive"] }
url = "2.4.1"
tracing-futures = { version = "0.2.5", features = [] }
tracing-attributes = "0.1.26"
tracing = "0.1.37"
tracing-subscriber = "0.3"
# only h1 for http needed as h2 would always be over tls
hyper = { version = "0.14.27", features = ["server", "http1", "client", "tcp"] , default-features = false }