[package]
name = "sniproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console", "jemalloc"]
jemalloc = ["tikv-jemallocator"]
console = ["console-subscriber"]

[dependencies]
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tokio-util = "0.7.8"
tls-parser = { version = "0.11.0", features = ["serialize"] }
cookie-factory = { version="0.3" }
fast-socks5 = "0.9.1"
trust-dns-resolver = { version = "0.23.0", features = ["dns-over-rustls"] }
clap = { version = "4.4.2", features = ["derive"] }
url = "2.4.1"
tracing-attributes = "0.1.26"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["parking_lot"] }
# only h1 for http needed as h2 would always be over tls
hyper = { version = "0.14.27", features = ["server", "http1", "client", "tcp"] , default-features = false }
tower = { version = "0.4.13", features = ["util"]}
anyhow = "1.0.75"
console-subscriber = { version = "0.2.0", features = ["parking_lot"], optional = true }
prometheus = "0.13.3"
once_cell = "1.18.0"
pin-project = { version = "1", features = [] }
http-body = "0.4.5"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5", optional = true }
